# python-krbcontext

./: .gitignore  .travis.yml  CHANGELOG.rst  CHANGES  CHANGES.txt  MANIFEST.in  Makefile  README  README.rst  README.txt  python-krbcontext.spec  requirements.txt  setup.cfg  setup.py  test-requirements.txt  tox.ini
.github/workflows/: lint.yaml  tests.yaml
doc/: Makefile
doc/source/: api.rst  conf.py  usage.rst
docs/source/: api.rst  conf.py  index.rst  release-notes.rst  usage.rst
krbcontext/: __init__.py  context.py  tests.py  tests_config.py  utils.py
scripts/: make-release.sh  make_release.sh  publish-doc.sh  publish-packages.sh  util.sh
src/krbcontext/: __init__.py  context.py  tests.py
test/: test_krbcontext.py
tests/: config.py  test_krbcontext.py
