[metadata]
name = krbcontext
version = 0.10
author = Chenxiong Qi
author_email = qcxhome@gmail.com
description = A Kerberos context manager
long_description = file: README.rst, CHANGELOG.rst
keywords = kerberos, context
license = GPLv3
url = https://github.com/krbcontext/python-krbcontext
python_requires = >=3.6
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Console
    Environment :: Web Environment
    Intended Audience :: Developers
    Intended Audience :: System Administrators
    License :: OSI Approved :: GNU General Public License (GPL)
    Operating System :: POSIX
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Software Development :: Libraries
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: System :: Systems Administration
project_urls =
    Issue Reports = https://github.com/krbcontext/python-krbcontext/issues
    Source = https://github.com/krbcontext/python-krbcontext/
    Documentation = https://krbcontext.github.io/

[options]
install_requires =
	gssapi
packages=find:

[options.extras_require]
tests = pytest; pytest-cov

[bdist_wheel]
universal = 1

[tool:pytest]
addopts = --cov=krbcontext --cov-report=term --cov-report=html

[coverage:report]
skip_covered = True